[package]
name = "rdapx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "http2", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2.1"
directories = "5"       # cross-platform cache dir
blake3 = "1.5"          # fast hash for cache keys
futures = "0.3"         # for buffered concurrency in bulk mode

[dev-dependencies]
assert_cmd = "2"
