[package]
name = "rdapx"
version = "0.1.0"
edition = "2021"
authors = ["Evozeus <43null_hatches@icloud.com>"]
description = "A fast, modern RDAP client written in Rust — bulk lookups, caching, JSON/NDJSON output, and colorized tables."
repository = "https://github.com/evozeus/rdapx"
license = "MIT"
keywords = ["rdap", "whois", "networking", "cli", "rust"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
rust-version = "1.74"
exclude = [".github/", "target/", ".vscode/", ".idea/"]

[[bin]]
name = "rdapx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "http2", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2.1"
directories = "5"       # cross-platform cache dir
blake3 = "1.5"          # fast hash for cache keys
futures = "0.3"         # for buffered concurrency in bulk mode

[dev-dependencies]
assert_cmd = "2"
